--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,14 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu.jpg");
 }
 
+#veronica-bustabad-cover {
+ background-image: url("https://imgur.com/a/UKsOHNC");
+}
+
+#veronica-bustabad-card {
+ background-image: url("https://imgur.com/rM9foZa");
+}
+
 .view-profile-div {
   position: absolute;
   bottom: 0;
